--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,9 +67,30 @@
 
 
 <div class="card">
-	<h3 class="card-header card-header-list-color">User List</h3>
+	<h5 class="card-header card-header-list-color">User List</h5>
 	<div class="card-body ">
-
+      <div class="form-row">
+		<div class="form-group col">
+           <table>
+			 <tr>
+				<th>Title</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>DOB</th>
+				<th>Email</th>
+				<th>Actions</th>
+			 </tr>
+			 <tr *ngFor = "let user of users">
+				<td>{{user.title}}</td>
+				<td>{{user.firstName}}</td>
+				<td>{{user.lastName}}</td>
+				<td>{{user.dob}}</td>
+				<td>{{user.email}}</td>
+             </tr>
+		   </table>
+		</div>
+	  </div>
 	</div>
 </div>	
+
 		
