--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,20 +65,28 @@
 	</div>
 </div>	
 
-
+<!-- <div>
+	{{users.title}}
+</div> -->
 <div class="card">
+<!--     Isse ham object ke data ko json mai convert kr skte hain
+		<ng-container *ngIf="users.length">
+		{{users | json}}
+	    </ng-container> 
+-->
+
 	<h5 class="card-header card-header-list-color">User List</h5>
 	<div class="card-body ">
       <div class="form-row">
 		<div class="form-group col">
            <table>
 			 <tr>
-				<th>Title</th>
-				<th>First Name</th>
-				<th>Last Name</th>
-				<th>DOB</th>
-				<th>Email</th>
-				<th>Actions</th>
+				<th>Title&nbsp;</th>
+				<th>First Name&nbsp;</th>
+				<th>Last Name&nbsp;</th>
+				<th>DOB&nbsp;</th>
+				<th>Email&nbsp;</th>
+				<th>Actions&nbsp;</th>
 			 </tr>
 			 <tr *ngFor = "let user of users">
 				<td>{{user.title}}</td>
