--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
 
             <div class="row mb-3">
             	<div class="form-group text-center">
-            	<button type="submit" class="btn btn-success me-2">Save</button>
+            	<button type="submit" class="btn btn-success me-2">{{buttonText}}</button>
             	<button type="button" class="btn btn-danger" (click)=" onCancel()">Cancel</button>
                 </div>
             </div>
